--- a/projek_mopro/pubspec.yaml
+++ b/projek_mopro/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
     sdk: flutter
   http: ^1.2.1
 
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.2
+
   shared_preferences: ^2.2.2
   intl: ^0.18.1
   image_picker: ^1.0.7
